--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "digicard",
   "version": "0.1.0",
-  "homepage": "https://github.com/asimnipty/digicard",
+  "homepage": "https://github.com/asimnipty/digicard.git",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
